fix: fix appointment tests